--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Etch-a-Sketch</title>
 </head>
 <body>
-  <div id="container"></div>
+  <h1>Etch-a-Sketch</h1>
+  <div id="gridContainer"></div>
 </body>
 </html>
