Create grid logic
grid created dynamically by user prompt, sizing handled by CSS variable

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <h1>Etch-a-Sketch</h1>
+  <button id="gridReset">Grid Reset</button>
   <div id="gridContainer"></div>
 </body>
 </html>
